--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,6 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
 composeBom = "2024.06.00"
-coil = "2.7.0"
 room = "2.6.1"
 retrofit2 = "2.11.0"
 ksp = "1.9.0-1.0.13"
@@ -20,6 +19,8 @@ coroutines = "1.8.1"
 hilt = "2.51.1"
 navigation = "2.7.7"
 lifecycleCompose = "2.8.4"
+#glide = "1.0.0-beta01"
+coil = "2.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,6 +47,7 @@ google-secrets = { group = "com.google.android.libraries.mapsplatform.secrets-gr
 
 androidx-viewmodel-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "vmLifecycle" }
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+#glide = {group="com.github.bumptech.glide", name="compose", version.ref = "glide"}
 #room
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
