--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
-agp = "8.5.2"
-kotlin = "1.9.0"
+agp = "8.6.0"
+kotlin = "2.0.20"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.4"
-activityCompose = "1.9.1"
-composeBom = "2024.06.00"
+lifecycleRuntimeKtx = "2.8.5"
+activityCompose = "1.9.2"
+composeBom = "2024.09.00"
 room = "2.6.1"
 retrofit2 = "2.11.0"
-ksp = "1.9.0-1.0.13"
+ksp = "2.0.20-1.0.25"
 okhttp3 = "4.12.0"
 secretsGradlePluginVersion = "2.0.1"
-vmLifecycle = "2.8.4"
+vmLifecycle = "2.8.5"
 serialization = "1.6.3"
 coroutines = "1.8.1"
 hilt = "2.51.1"
-navigation = "2.7.7"
-lifecycleCompose = "2.8.4"
+navigation = "2.8.0"
+lifecycleCompose = "2.8.5"
 #glide = "1.0.0-beta01"
 coil = "2.7.0"
 reorderable = "2.3.0"
@@ -77,3 +77,4 @@ secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugi
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
